force-app/main/default/objects/Renewals__c/Renewals__c.object-meta.xml
<CustomObject>
    <label>Renewals</label>
    <nameField>
        <label>Renewals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>