force-app/main/default/objects/Renewals__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Renewal Active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>