force-app/main/default/objects/Renewals__c/fields/Commencement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Start_Date__c</fullName>
    <label>Commencement (Start) Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>