force-app/main/default/objects/Renewals__c/fields/Next_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Due_Date__c</fullName>
    <label>Next Payment Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>