force-app/main/default/objects/Renewals__c/fields/Policy_Holder_Name_Vehicle_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name_Vehicle_No__c</fullName>
    <label>Policy Holder Name / Vehicle No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>