force-app/main/default/objects/Renewals__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial</label>
    <type>AutoNumber</type>
</CustomField>