force-app/main/default/objects/Renewals__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Awaited</fullName>
            </value>
            <value>
                <fullName>Policy Finalised</fullName>
            </value>
            <value>
                <fullName>Payment Issued</fullName>
            </value>
            <value>
                <fullName>New Policy Uploaded</fullName>
            </value>
            <value>
                <fullName>Renew Policy</fullName>
                <label>Renew Old Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>