force-app/main/default/objects/Renewals__c/fields/Sum_Assured_Value__c.field-meta.xml
<CustomField>
    <fullName>Sum_Assured_Value__c</fullName>
    <label>Sum Assured Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>