force-app/main/default/objects/Renewals__c/validationRules/Insurance_Section_Fill.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Section_Fill</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type__c , &quot;Insurance&quot;) ,
   OR( ISBLANK( Company__c ) ,ISBLANK(  Plan_Name__c  ),ISBLANK(  Policy_Holder_Name_Vehicle_No__c  ), ISBLANK(  Policy_Number__c  ),ISBLANK(  TEXT( Expiry_Date__c )  ), ISBLANK( TEXT( Commencement_Start_Date__c ) ) ,ISBLANK( TEXT(  Next_Payment_Due_Date__c  ) ),ISBLANK(  TEXT( Sum_Assured_Value__c )  ) ) )</errorConditionFormula>
    <errorMessage>Fill in the details in Insurance Section</errorMessage>
</ValidationRule>