force-app/main/default/objects/Renewals__c/validationRules/Not_Insurance.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Insurance</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISPICKVAL( Type__c , &quot;Insurance&quot;) ),  OR( ISBLANK( TEXT( Commencement_Start_Date__c ) ) ,ISBLANK( TEXT(  Next_Payment_Due_Date__c  ) ))  )</errorConditionFormula>
    <errorMessage>Fill in the Commencement Date and Next Payment Due Date</errorMessage>
</ValidationRule>